Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59734

[5.9 REG] dockwidgets crashy on macOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9
    • 5.9
    • Widgets: Main Window
    • None
    • macOS 10.10.5 and 10.11.6, Qt 5.9 build from sources
    • macOS

      https://codereview.qt-project.org/#/c/173816/ introduced a crash on macOS when using dock widgets.

      Steps to reproduce:
      1. Run qtbase/examples/widgets/mainwindows/mainwindow
      2. Go to Main Window menu and also check "Nested" and "Groupped dragging" options.
      3. Now drag "Red" off the main window, so it floats.
      4. Then drag "Green" and drop it over "Red", so they tab -> Crash

      If it doesn't crash then try again, or play with it a bit until it crashes.

      (lldb) 
      * thread #1: tid = 0x4749f, 0x00007fff88b640e9 libobjc.A.dylib`objc_msgSend + 41, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x1240a5c50)
        * frame #0: 0x00007fff88b640e9 libobjc.A.dylib`objc_msgSend + 41
          frame #1: 0x00000001038b7232 libqcocoa.dylib`___lldb_unnamed_function748$$libqcocoa.dylib + 50
          frame #2: 0x000000010389bc97 libqcocoa.dylib`___lldb_unnamed_function327$$libqcocoa.dylib + 231
          frame #3: 0x00007fff934d839c Foundation`-[__NSObserver _doit:] + 307
          frame #4: 0x00007fff963b345c CoreFoundation`__CFNOTIFICATIONCENTER_IS_CALLING_OUT_TO_AN_OBSERVER__ + 12
          frame #5: 0x00007fff962a3634 CoreFoundation`_CFXNotificationPost + 3140
          frame #6: 0x00007fff934a4aa1 Foundation`-[NSNotificationCenter postNotificationName:object:userInfo:] + 66
          frame #7: 0x00007fff8aaafc41 CoreGraphics`CGSConnectionNotifier::invoke_callbacks(unsigned int, void*, unsigned long) const + 601
          frame #8: 0x00007fff8aaaf980 CoreGraphics`(anonymous namespace)::notify_datagram_handler(unsigned int, CGSDatagramType, void*, unsigned long, void*) + 103
          frame #9: 0x00007fff8aa8dfd2 CoreGraphics`CGSDatagramReadStream::dispatch_next_main_queue_datagram() + 280
          frame #10: 0x00007fff8aa8cf18 CoreGraphics`CGSDatagramReadStream::dispatch_next_datagram() + 42
          frame #11: 0x00007fff8aa8cede CoreGraphics`CGSDatagramReadStream::dispatch_datagrams() + 50
          frame #12: 0x00007fff8aacf502 CoreGraphics`___ZN21CGSDatagramReadStream24dispatch_datagrams_asyncEP16dispatch_queue_sPS__block_invoke + 18
          frame #13: 0x00007fff97695700 libdispatch.dylib`_dispatch_call_block_and_release + 12
          frame #14: 0x00007fff97691e73 libdispatch.dylib`_dispatch_client_callout + 8
          frame #15: 0x00007fff976a2767 libdispatch.dylib`_dispatch_main_queue_callback_4CF + 861
          frame #16: 0x00007fff9634a3f9 CoreFoundation`__CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ + 9
          frame #17: 0x00007fff9630568f CoreFoundation`__CFRunLoopRun + 2159
          frame #18: 0x00007fff96304bd8 CoreFoundation`CFRunLoopRunSpecific + 296
          frame #19: 0x00007fff907db56f HIToolbox`RunCurrentEventLoopInMode + 235
          frame #20: 0x00007fff907db1ee HIToolbox`ReceiveNextEventCommon + 179
          frame #21: 0x00007fff907db12b HIToolbox`_BlockUntilNextEventMatchingListInModeWithFilter + 71
          frame #22: 0x00007fff90f6d8ab AppKit`_DPSNextEvent + 978
          frame #23: 0x00007fff90f6ce58 AppKit`-[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 346
          frame #24: 0x00007fff90f62af3 AppKit`-[NSApplication run] + 594
          frame #25: 0x00000001038aaaff libqcocoa.dylib`___lldb_unnamed_function529$$libqcocoa.dylib + 2143
          frame #26: 0x0000000100cd6af1 libQt5Core.5.dylib`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401
          frame #27: 0x0000000100cdb395 libQt5Core.5.dylib`QCoreApplication::exec() + 341
          frame #28: 0x00000001000101e3 mainwindow`main + 947
          frame #29: 0x00007fff890735c9 libdyld.dylib`start + 1
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            iamsergio Sergio Martins
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes